--- a/Updating-State/package.json
+++ b/Updating-State/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "immer": "^9.0.17",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
   },
